# ray-tracing-one-weekend-rust

logo-reader/: Cargo.toml
logo-reader/src/: main.rs
w1-1/src/: main.rs
w1-2/: Cargo.toml
w1-2/src/: main.rs
w1-3/: Cargo.toml  w1-3.ppm
w1-3/src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs
w2/: Cargo.toml
w2-2/: Cargo.toml
w2-2/src/: camera.rs  main.rs  material.rs  ray.rs  sphere.rs
w2-3/src/: aabb.rs  bvh_node.rs  hittable.rs  hittable_list.rs  lib.rs  material.rs  sphere.rs  vec3.rs
w2-4/: Cargo.toml
w2-4/src/: XyRect.rs  aabb.rs  box_model.rs  bvh_node.rs  camera.rs  constant_medium.rs  hittable.rs  lib.rs  main.rs  material.rs  perlin.rs  rect.rs  rotate.rs  sphere.rs  texture.rs  translate.rs  vec3.rs  xy_rect.rs
w2/src/: hittable.rs  hittable_list.rs  lib.rs  main.rs
