[package]
name = "weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.6"
tokio = { version = "1.25.0", features = ["full"] }
image = { version = "0.24.9", features = [] }
